aurral-ton/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: aurral
  namespace: aurral
  labels:
    app: aurral
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
    name: http
  selector:
    app: aurral
