aurral-ton/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: aurral
  namespace: aurral
spec:
  hosts:
    - aurral.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: aurral
            port:
              number: 3001
